--- a/src/main/resources/templates/welcome.html
+++ b/src/main/resources/templates/welcome.html
@@ -1,10 +1,9 @@
-<!DOCTYPE html>
 <html lang="en" xmlns:th="http://thymeleaf.org">
 <head>
     <meta charset="UTF-8"/>
     <title>Title</title>
 </head>
 <body>
-    <h1 th:text="$(tagline)"></h1>
+<h1 th:text="${tagline}"></h1>
 </body>
 </html>
